# yandex_dl_course_4

./: .gitignore  README.md  download_dataset.txt  notebook.ipynb  pyproject.toml
scripts/: __init__.py  config.py  dataset.py  utils.py
